// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../index.js <AccessButton /> (state.loggedIn false) should render 1`] = `
Array [
  <button
    className="Button"
    color="primary"
    onClick="state.login"
    variant="contained"
  >
    <span
      className="translation"
    >
      <span
        className="en"
      >
        Log in
      </span>
      <span
        className="es"
      >
        Ingresar
      </span>
    </span>
  </button>,
  <div
    aria-describedby="lib-react-access_button-logout_dialog_text"
    className="Dialog"
    fullScreen={
      Object {
        "desktop": false,
        "mobile": true,
        "tablet": false,
      }
    }
    id="lib-react-access_button-logout_dialog"
    maxWidth="sm"
    onClose="state.logout.close"
    open="state.logout.isOpen"
    scroll="body"
  >
    <div
      className="DialogContent"
    >
      <div
        className="DialogContentText"
        color="textPrimary"
        id="lib-react-access_button-logout_dialog_text"
        variant="body1"
      >
        <span
          className="translation"
        >
          <span
            className="en"
          >
            Logging out may cause data loss.
          </span>
          <span
            className="es"
          >
            Cerrar sesión puede causar perdida de datos.
          </span>
        </span>
      </div>
    </div>
    <div
      className="DialogActions"
    >
      <label
        className="FormControlLabel lib-react-access_button-autoLogout({'paddingLeft':16})"
      >
        <div
          className="label-prop"
        >
          <span
            className="Typography"
            color="textSecondary"
            variant="body2"
          >
            <span
              className="translation"
            >
              <span
                className="en"
              >
                Don't show me this again
              </span>
              <span
                className="es"
              >
                No volver a mostrarme esto
              </span>
            </span>
          </span>
        </div>
        <div
          className="control-prop"
        >
          <input
            checked="state.logout.auto"
            className="Checkbox"
            color="primary"
            onChange="state.logout.handleAuto"
            type="checkbox"
          />
        </div>
      </label>
      <div
        className="lib-react-access_button-flexibleSpace({'flexGrow':1})"
      />
      <button
        aria-controls="lib-react-access_button-logout_dialog"
        className="Button"
        color="default"
        onClick="state.logout.close"
        variant="text"
      >
        <span
          className="translation"
        >
          <span
            className="en"
          >
            Cancel
          </span>
          <span
            className="es"
          >
            Cancelar
          </span>
        </span>
      </button>
      <button
        autoFocus={true}
        className="Button"
        color="default"
        onClick="state.logout.confirm"
        variant="text"
      >
        <span
          className="translation"
        >
          <span
            className="en"
          >
            Ok
          </span>
          <span
            className="es"
          >
            Aceptar
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`../index.js <AccessButton /> (state.loggedIn true) should render 1`] = `
Array [
  <button
    aria-controls="lib-react-access_button-logout_dialog"
    className="Button"
    color="default"
    onClick="state.logout.open"
    variant="text"
  >
    <span
      className="translation"
    >
      <span
        className="en"
      >
        Log out
      </span>
      <span
        className="es"
      >
        Salir
      </span>
    </span>
  </button>,
  <div
    aria-describedby="lib-react-access_button-logout_dialog_text"
    className="Dialog"
    fullScreen={
      Object {
        "desktop": false,
        "mobile": true,
        "tablet": false,
      }
    }
    id="lib-react-access_button-logout_dialog"
    maxWidth="sm"
    onClose="state.logout.close"
    open="state.logout.isOpen"
    scroll="body"
  >
    <div
      className="DialogContent"
    >
      <div
        className="DialogContentText"
        color="textPrimary"
        id="lib-react-access_button-logout_dialog_text"
        variant="body1"
      >
        <span
          className="translation"
        >
          <span
            className="en"
          >
            Logging out may cause data loss.
          </span>
          <span
            className="es"
          >
            Cerrar sesión puede causar perdida de datos.
          </span>
        </span>
      </div>
    </div>
    <div
      className="DialogActions"
    >
      <label
        className="FormControlLabel lib-react-access_button-autoLogout({'paddingLeft':16})"
      >
        <div
          className="label-prop"
        >
          <span
            className="Typography"
            color="textSecondary"
            variant="body2"
          >
            <span
              className="translation"
            >
              <span
                className="en"
              >
                Don't show me this again
              </span>
              <span
                className="es"
              >
                No volver a mostrarme esto
              </span>
            </span>
          </span>
        </div>
        <div
          className="control-prop"
        >
          <input
            checked="state.logout.auto"
            className="Checkbox"
            color="primary"
            onChange="state.logout.handleAuto"
            type="checkbox"
          />
        </div>
      </label>
      <div
        className="lib-react-access_button-flexibleSpace({'flexGrow':1})"
      />
      <button
        aria-controls="lib-react-access_button-logout_dialog"
        className="Button"
        color="default"
        onClick="state.logout.close"
        variant="text"
      >
        <span
          className="translation"
        >
          <span
            className="en"
          >
            Cancel
          </span>
          <span
            className="es"
          >
            Cancelar
          </span>
        </span>
      </button>
      <button
        autoFocus={true}
        className="Button"
        color="default"
        onClick="state.logout.confirm"
        variant="text"
      >
        <span
          className="translation"
        >
          <span
            className="en"
          >
            Ok
          </span>
          <span
            className="es"
          >
            Aceptar
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`../index.js external dependencies @material-ui/core should match the installed version 1`] = `"^4.5.0"`;

exports[`../index.js external dependencies prop-types should match the installed version 1`] = `"^15.7.2"`;

exports[`../index.js external dependencies react should match the installed version 1`] = `"^16.10.1"`;

exports[`../index.js external dependencies react-test-renderer should match the installed version 1`] = `"^16.10.1"`;

exports[`../index.js local dependencies ../useAccessButtonState should match the saved hash 1`] = `"96cad7055d78a884b52ab2da71684e24877af2747914379e8fba32103fcdaa68"`;

exports[`../index.js local dependencies lib/react/useResponsiveLayout should match the saved hash 1`] = `"5a5d5e45dca9756d0559fcce1bd2c96a705eb964e40f6f2c3608ac87e4f11d6f"`;

exports[`../index.js local dependencies lib/react/useTranslation should match the saved hash 1`] = `"c6ac8310d836a2c7d46aadd2dd8fc9ca5f36bc737ef315a63ba20e62ca4c5ae8"`;
